--- a/src/components/Boton.css
+++ b/src/components/Boton.css
@@ -12,7 +12,7 @@
     user-select: none;
 }
 .operador{
-    background-color: #f5672c;
+    background-color:rgb(14, 219, 219);
 }
 .boton:hover {
     background-color: #444444;
