--- a/src/components/Boton.css
+++ b/src/components/Boton.css
@@ -14,6 +14,9 @@
 .operador{
     background-color: #f5672c;
 }
+.igual{
+    background-color:darkblue;
+}
 .boton:hover {
     background-color: #444444;
 }
