--- a/src/components/BotonClear.css
+++ b/src/components/BotonClear.css
@@ -1,14 +1,16 @@
 .boton-clear{
-    height: 80px;
-    font-size: 1.6em;
+    height: 83px;
     display: flex;
-    flex: 1;
-    background-color: #ac0246;
+    flex: 1 1;
     justify-content: center;
     align-items: center;
+    font-weight: bold;
+    background-color: #333;
     color: white;
+    border: 0.5px solid #333;
     cursor: pointer;
+    user-select: none;
 }
 .boton-clear:hover{
-    background-color: #ebb000;
+    background-color: #444444;
 }
