--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 .calculadora {
   width: 400px;
   height: 600px;
-  background-color: #2b2b2b;
+  background-color: #333;
   box-shadow: 0 0 24px 10px rgba(0, 0, 0, 0.3);
   height: 600px;
 }
@@ -19,9 +19,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(24, 24, 24);
+  background-color: #1F1F1F;
   color: #fff;
-  font-weight: bold;
-  border: 0.5px solid #333;
-  font-size: 1.4rem;  
+  border: 0.01px solid #1F1F1F;
+  font-size: 1.2rem;  
 }
