--- a/src/components/Pantalla.css
+++ b/src/components/Pantalla.css
@@ -3,10 +3,9 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-weight: bold;
-    font-size: 30px;
-    background-color: #0a0a23;
+    font-size: 50px;
+    background-color: #1F1F1F;
     color: white;
     padding: 11px 30px 11px 11px;
-    margin: 1px solid #888;
+    margin: 1px solid #333;
 }
