--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   font-size: 1.2rem;
 }
 
-ion-modal#historial {
+ion-modal {
   width: 400px;
   height: 665px;
   position: absolute;
@@ -36,18 +36,18 @@ ion-modal#historial {
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-ion-modal#historial::part(backdrop) {
+ion-modal::part(backdrop) {
   background: rgba(209, 213, 219);
   opacity: 1;
 }
 
-ion-modal#historial ion-toolbar {
+ion-modal ion-toolbar {
   background: #1F1F1F;
   color: white;
   ;
 }
 
-ion-modal#historial ion-content {
+ion-modal ion-content {
   background: #1F1F1F;
   color: white;
   ;
