--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,20 @@ ion-modal ion-content {
   color: white;
   ;
 }
+
+ion-menu {
+  width: 400px;
+  height: 675px;
+  position: absolute;
+  top: 51%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+
+ion-menu::part(container) {
+  border-radius: 0 20px 20px 0;
+
+  box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
+}
