--- a/src/components/Boton.css
+++ b/src/components/Boton.css
@@ -35,3 +35,16 @@
 .botonMem:hover {
     background-color: #444444;
 }
+.botonE {
+    height: 40px;
+    display: flex;
+    flex: 1 1;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F1F1F;
+    color: white;
+    border: 0.5px solid #1F1F1F;
+    cursor: pointer;
+    user-select: none;
+    font-size: 0.8rem;
+}
