--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,12 @@ ion-menu::part(container) {
 
   box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
 }
+
+ion-button {
+  --background: #1F1F1F;
+  --border: 15px solid #1F1F1F;
+  --color: white;
+  --border-color: #1F1F1F;
+  --border-style: solid;
+  --border-width: 5.8px;
+}
