--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,6 @@ ion-modal::part(backdrop) {
 ion-modal ion-toolbar {
   background: #1F1F1F;
   color: white;
-  ;
 }
 
 ion-modal ion-content {
@@ -63,10 +62,8 @@ ion-menu {
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-
 ion-menu::part(container) {
   border-radius: 0 20px 20px 0;
-
   box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
 }
 
@@ -77,4 +74,37 @@ ion-button {
   --border-color: #1F1F1F;
   --border-style: solid;
   --border-width: 5.8px;
+}
+
+.fila-sup {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: #1F1F1F;
+  color: #fff;
+  border: 0.01px solid #1F1F1F;
+  font-size: 1.2rem;
+}
+
+.hist {
+  margin-right: 10px;
+  background-color: #1F1F1F;
+  color: #fff;
+  border: 0.01px solid #1F1F1F;
+  font-size: 1.2rem;
+}
+
+ion-label {
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 20px;
+}
+
+.titulo {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-style: italic;
 }
